# impala-udf-mrb_eval

./: .gitignore  CMakeLists.txt  README.md  build.sh  mrb_eval-test.cpp  mrb_eval.cpp  mrb_eval.h
